--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crawlyx",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Crawlyx is an open-source command-line interface (CLI) based web crawler built using Node.js. It is designed to crawl websites and extract useful information like links, images, and text. It is lightweight, fast, and easy to use.",
   "main": "index.js",
   "bin": {
@@ -24,7 +24,10 @@
     "configurable options",
     "plugin system",
     "open-source",
-    "crawling", "crawler", "scraper", "spider"
+    "crawling",
+    "crawler",
+    "scraper",
+    "spider"
   ],
   "devDependencies": {
     "jest": "^29.5.0"
