--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jest": "^29.5.0"
   },
   "dependencies": {
-    "jsdom": "^21.1.1"
+    "jsdom": "^21.1.1",
+    "node-fetch": "^2.6.9"
   },
   "repository": {
     "type": "git",
